--- a/Changelog.txt
+++ b/Changelog.txt
@@ -18,11 +18,6 @@ Fixed M1 stop wait loop bug.
 
 14 JAN 2024:
 Fixed toolchange and dualmode override bug at end of file. Adjusted extruder movement speeds. Cleaned up STOP, PAUSE & FINISH PRINT processing. Temperatures above OEM maximum of 260°C will be highlighted red. Merged with SIZZLING version.
-<<<<<<< HEAD
-<<<<<<< HEAD
 
-
-=======
->>>>>>> sizzling
-=======
->>>>>>> sizzling
+12 JUN 2024:
+Fixed deadlock bug after filament runout and resume. Fixed pause deadlock bug.
